--- a/index.html
+++ b/index.html
@@ -28,67 +28,62 @@
         </li>
         <li class="secondary-nav">
           <a href="HTML/checkout.html">
-            <i class="fas fa-shopping-cart"></i> CART
+            <i class="fas fa-shopping-cart"></i> WINKELWAGEN
           </a>
         </li>
-        <li class="secondary-nav">
-          <a href="./HTML/features.html">DESIGN SUMMARY</a>
-        </li>
-
-
-        <li class="secondary-nav"><a href="HTML/women.html">WOMEN</a></li>
-        <li class="secondary-nav"><a href="HTML/men.html">MEN</a></li>
+        <li class="secondary-nav"><a href="HTML/women.html">ANDERE PRODUCTEN</a></li>
+        <li class="secondary-nav"><a href="HTML/men.html">SCHOENEN</a></li>
 
       </ul>
     </nav>
     <div class="pxtext">
       <span class="border">
-        Nike Air Jordan
+        Gebakken Lucht
       </span>
-      <p><a href="HTML/men.html">Shop Now</a></p>
+      <p><a id="sale" href="HTML/men.html">SALE</a></p>
     </div>
   </header>
   <!--////////////////////////////////-->
   <div class="cookieConsent2" id="cookieConsent2">
     <div>
       Geef toegang tot dit
-      <input type="checkbox">
-    </div>
-    <div>
-      Geef toegang tot dat
-      <input type="checkbox">
+      <input type="checkbox" checked>
     </div>
     <div>
       Geef toegang tot dit
-      <input type="checkbox">
-    </div>
-    <div>
-      Geef toegang tot dat
-      <input type="checkbox">
+      <input type="checkbox" checked>
     </div>
     <div>
       Geef toegang tot dit
-      <input type="checkbox">
-    </div>
-    <div>
-      Geef toegang tot dat
-      <input type="checkbox">
+      <input type="checkbox" checked>
     </div>
     <div>
       Geef toegang tot dit
-      <input type="checkbox">
-    </div>
-    <div>
-      Geef toegang tot dat
-      <input type="checkbox">
+      <input type="checkbox" checked>
     </div>
     <div>
       Geef toegang tot dit
-      <input type="checkbox">
+      <input type="checkbox" checked>
     </div>
     <div>
-      Geef toegang tot dat
-      <input type="checkbox">
+      Geef toegang tot dit
+      <input type="checkbox" checked>
+    </div>
+    <div>
+      Geef toegang tot dit
+      <input type="checkbox" checked>
+    </div>
+    <div>
+      Geef toegang tot dit
+      <input type="checkbox" checked>
+    </div>
+    <div>
+      Geef toegang tot dit
+      <input type="checkbox" checked>
+    </div>
+    <div>
+      En geef ook toegang tot dit
+      <input type="checkbox" checked>
     </div>
     <div>
 
@@ -119,11 +114,11 @@
           <a href="HTML/men.html">
             <img class="image" src="./Images/img-men6.jpg" alt="Alt text" />
             <div class="normal">
-              <div class="text">MEN</div>
+              <div class="text">SCHOENEN</div>
             </div>
             <div class="hover">
               <img class="image" src="./Images/img-Nike12.jpg" alt="Alt text hover" />
-              <div class="text">MEN</div>
+              <div class="text">SCHOENEN</div>
             </div>
           </a>
         </div>
@@ -133,11 +128,11 @@
           <a href="HTML/women.html">
             <img class="image" src="./Images/img-women5.jpeg" alt="Alt text" />
             <div class="normal">
-              <div class="text">WOMEN</div>
+              <div class="text">ANDERE PRODUCTEN</div>
             </div>
             <div class="hover">
               <img class="image" src="./Images/img-women6.jpeg" alt="Alt text hover" />
-              <div class="text">WOMEN</div>
+              <div class="text">ANDERE PRODUCTEN</div>
             </div>
           </a>
         </div>
@@ -145,7 +140,7 @@
     </div>
   </section>
   <section class="preview">
-    <h2 align="center">Best Sellers</h2>
+    <h2 align="center">BESTE KOOPJES!</h2>
     <div class="row" style="  width: 80%;
       margin: 0 auto;">
       <figure class="item">
@@ -156,8 +151,8 @@
       </figure>
       <figure class="item">
         <a href="HTML/info.html">
-          <img src="./Images/img-Nike3.jpg" alt="" width="100%" />
-          <figcaption>Nike Air Blue</figcaption>
+          <img src="./Images/a-water.jpg" alt="" width="100%" />
+          <figcaption>Droog water</figcaption>
         </a>
       </figure>
       <figure class="item">
@@ -169,7 +164,7 @@
       <figure class="item">
         <a href="HTML/info.html">
           <img src="./Images/img-Nike10.jpg" alt="" width="100%" />
-          <figcaption>Nike Air Orange</figcaption>
+          <figcaption>Bakje Lucht</figcaption>
         </a>
       </figure>
     </div>
@@ -178,30 +173,23 @@
   <footer>
     <div class="row foot">
       <div class="col">
-        <h1>Downy Shoes</h1>
-        <p>
-          Official <a href="https://www.nike.com/xf/en_gb/">Nike</a> Partner
-        </p>
+        <h1>HOL.COM</h1>
       </div>
       <div class="col">
         <h2>Links</h2>
         <ul>
-          <li><a href="./HTML/shop.html">Catalog</a></li>
-
+          <li><a href="#">dit</a></li>
           <li><a href="#">nog iets</a></li>
           <li><a href="#">meer</a></li>
           <li>
             <a href="./HTML/terms-and-conditions.html">Terms and conditions</a>
-          </li>
-          <li>
-            <a href="./HTML/refund-policy.html">Refund Policy</a>
           </li>
         </ul>
       </div>
       <div class="col">
         <h2>
           Copyright <sup>©</sup>
-          <a href="https://www.codepen.io/jeetg57" target="_blank">Jeet Gohil</a>
+          <a href="https://www.codepen.io/jeetg57" target="_blank">HOL.COM</a>
         </h2>
       </div>
     </div>
