--- a/HTML/checkout.html
+++ b/HTML/checkout.html
@@ -28,7 +28,7 @@
         </li>
         <li class="secondary-nav">
           <a href="../HTML/checkout.html">
-            <i class="fas fa-shopping-cart"></i> CART
+            <i class="fas fa-shopping-cart"></i> WINKELWAGEN
           </a>
         </li>
         <li class="secondary-nav"><a href="../HTML/women.html">ANDERE PRODUCTEN</a></li>
@@ -84,35 +84,25 @@
 
       </div>
       <div class="column2">
-        <h3>Cart Totals</h3>
+        <h3>Winkelwagen totaal</h3>
         <div class="row1">
           <div class="col">
-            <h5>Subtotals</h5>
-            <h5>Shipping</h5>
+            <h5>Subtotaal</h5>
+            <h5>verzending</h5>
           </div>
           <div class="col">
             <h5>$199.90</h5>
             <div class="wrapper">
               <span>
-                <input type="radio" name="shipping" id="" checked />Flat
-                rate:$10
+                Gratis verzending
               </span>
-              <span>
-                <input type="radio" name="shipping" id="" />Free Shipping
-                <br />
-              </span>
-              <span>
-                <input type="radio" name="shipping" id="" />Local Pickup
-              </span>
-              <span>Shipping options <br />
-                will be updated <br />during checkout.</span>
             </div>
           </div>
         </div>
-        <h3>Totals &nbsp; &nbsp; $1000</h3>
+        <h3>Totaal &nbsp; &nbsp; $1000</h3>
         <div class="buttons">
-          <a class="button-checkout" href="confirmation.html">Checkout</a>
-          <a class="cancel" href="../HTML/men.html">Continue Shopping</a>
+          <a class="button-checkout" href="confirmation.html">bestellen</a>
+          <a class="cancel" href="../HTML/men.html">Verder gaan met winkelen</a>
         </div>
       </div>
     </div>
