--- a/HTML/women.html
+++ b/HTML/women.html
@@ -32,15 +32,15 @@
     </ul>
   </nav>
   <section class="items">
-    <h1>ANDERE PRODUCTEN</h1>
+    <h1>ANDERE PRODUCTEN <br>(GRAPJE)</h1>
     <div class="row">
       <div class="col">
-        <h2>SORT BY</h2>
-        <h3>PRICE</h3>
+        <h2>FILTER</h2>
+        <h3>PRIJS</h3>
         <hr />
-        <input type="radio" name="price" id="" /> Under $60 <br />
-        <input type="radio" name="price" id="" /> Over $60 <br />
-        <h3>SIZE</h3>
+        <input type="radio" name="price" id="" /> ONDER $60 <br />
+        <input type="radio" name="price" id="" /> BOVEN $60 <br />
+        <h3>MAAT</h3>
         <hr />
         <input type="radio" name="size" id="" /> 36 <br />
         <input type="radio" name="size" id="" /> 37 <br />
@@ -50,12 +50,12 @@
         <input type="radio" name="size" id="" /> 41 <br />
         <input type="radio" name="size" id="" /> 42 <br />
         <input type="radio" name="size" id="" /> 43 <br />
-        <h3>COLOR</h3>
+        <h3>KLEUR</h3>
         <hr />
-        <input type="radio" name="color" id="" /> Black <br />
-        <input type="radio" name="color" id="" /> White <br />
-        <input type="radio" name="color" id="" /> Red <br />
-        <input type="radio" name="color" id="" /> Blue <br />
+        <input type="radio" name="color" id="" /> ZWART <br />
+        <input type="radio" name="color" id="" /> WIT <br />
+        <input type="radio" name="color" id="" /> ROOD <br />
+        <input type="radio" name="color" id="" /> BLAUW <br />
       </div>
       <div class="col2">
         <img class="header-img" src="../Images/nike-women.gif" alt="" />
@@ -117,7 +117,7 @@
           </div>
           <div class="card">
             <img src="../Images/img-Nike10.jpg" Shoe" style="width:100%">
-            <h3>Nike Air Max (Yellow)</h3>
+            <h3>bakje lucht</h3>
             <p class="price">$199.99</p>
             <p><a href="./info.html">Learn More</a></p>
           </div>
