--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         Gebakken Lucht
       </span>
       <p><a id="sale" href="HTML/men.html">SALE</a></p>
+      <div class="time">
+        <h2 id="timer"></h2>
+      </div>
     </div>
   </header>
   <!--////////////////////////////////-->
@@ -87,7 +90,7 @@
     </div>
     <div>
 
-      <a href="#" class="cookieConsentNOT">doorgaan</a>
+      <a href="#" class="cookieConsentNOT" id="cookieConsentnee">doorgaan</a>
       <a class="cookieConsentOK">ALLES ACCEPTEREN</a>
     </div>
   </div>
