--- a/HTML/info.html
+++ b/HTML/info.html
@@ -43,7 +43,7 @@
         <img src="../Images/nike-6.jpg" alt="" srcset="" />
       </div>
       <div class="col2">
-        <h1>Nike Free RN OC</h1>
+        <h2>Nike Free RN OC</h2>
         <p>
           The iconic Nike Free returns with more perforations and engineered
           mesh in the upper that strategically target breathability across
@@ -51,7 +51,7 @@
           without compromising comfort, while exposed Flywire cables give you
           a snug fit at higher speeds.
         </p>
-        <h2>$399.99</h2>
+        <h1 id="price">$399.99</h1>
         <a class="button-cart" href="checkout.html">Add to cart</a> &nbsp;
         &nbsp;
         <a class="wishlist" href="">Add to wishlist</a>
