--- a/HTML/terms-and-conditions.html
+++ b/HTML/terms-and-conditions.html
@@ -31,8 +31,8 @@
       <li class="secondary-nav"><a href="../HTML/men.html">SCHOENEN</a></li>
     </ul>
   </nav>
-  <div class="container">
-    <h2><strong>Terms and Conditions</strong></h2>
+  <div class="container" style="color: grey;">
+    <h2>Terms and Conditions</h2>
 
     <p>Welcome to Downy Shoes!</p>
 
@@ -46,7 +46,6 @@
       conditions. Do not continue to use Downy Shoes if you do not agree to
       take all of the terms and conditions stated on this page. Our Terms and
       Conditions were created with the help of the
-      <a href="https://www.termsandconditionsgenerator.com">Terms And Conditions Generator</a>.
     </p>
 
     <p>
@@ -66,7 +65,7 @@
       referring to same.
     </p>
 
-    <h3><strong>Cookies</strong></h3>
+    <p>Cookies</p>
 
     <p>
       We employ the use of cookies. By accessing Downy Shoes, you agreed to
@@ -81,7 +80,7 @@
       cookies.
     </p>
 
-    <h3><strong>License</strong></h3>
+    <p>License</p>
 
     <p>
       Unless otherwise stated, Downy Shoes and/or its licensors own the
@@ -92,12 +91,12 @@
     </p>
 
     <p>You must not:</p>
-    <ul>
-      <li>Republish material from Downy Shoes</li>
-      <li>Sell, rent or sub-license material from Downy Shoes</li>
-      <li>Reproduce, duplicate or copy material from Downy Shoes</li>
-      <li>Redistribute content from Downy Shoes</li>
-    </ul>
+    <p>
+      Republish material from Downy Shoes
+      Sell, rent or sub-license material from Downy Shoes
+      Reproduce, duplicate or copy material from Downy Shoes
+      Redistribute content from Downy Shoes
+    </p>
 
     <p>This Agreement shall begin on the date hereof.</p>
 
@@ -122,54 +121,43 @@
 
     <p>You warrant and represent that:</p>
 
-    <ul>
-      <li>
-        You are entitled to post the Comments on our website and have all
-        necessary licenses and consents to do so;
-      </li>
-      <li>
-        The Comments do not invade any intellectual property right, including
-        without limitation copyright, patent or trademark of any third party;
-      </li>
-      <li>
-        The Comments do not contain any defamatory, libelous, offensive,
-        indecent or otherwise unlawful material which is an invasion of
-        privacy
-      </li>
-      <li>
-        The Comments will not be used to solicit or promote business or custom
-        or present commercial activities or unlawful activity.
-      </li>
-    </ul>
+    <p>
+      You are entitled to post the Comments on our website and have all
+      necessary licenses and consents to do so;
+      The Comments do not invade any intellectual property right, including
+      without limitation copyright, patent or trademark of any third party;
+      The Comments do not contain any defamatory, libelous, offensive,
+      indecent or otherwise unlawful material which is an invasion of
+      privacy
+      The Comments will not be used to solicit or promote business or custom
+      or present commercial activities or unlawful activity.
 
     <p>
       You hereby grant Downy Shoes a non-exclusive license to use, reproduce,
       edit and authorize others to use, reproduce and edit any of your
       Comments in any and all forms, formats or media.
     </p>
-
-    <h3><strong>Hyperlinking to our Content</strong></h3>
+    <p>Hyperlinking to our Content</p>
 
     <p>
       The following organizations may link to our Website without prior
       written approval:
     </p>
 
-    <ul>
-      <li>Government agencies;</li>
-      <li>Search engines;</li>
-      <li>News organizations;</li>
-      <li>
-        Online directory distributors may link to our Website in the same
-        manner as they hyperlink to the Websites of other listed businesses;
-        and
-      </li>
-      <li>
-        System wide Accredited Businesses except soliciting non-profit
-        organizations, charity shopping malls, and charity fundraising groups
-        which may not hyperlink to our Web site.
-      </li>
-    </ul>
+    <p>
+      Government agencies;
+      Search engines;
+      News organizations;
+
+      Online directory distributors may link to our Website in the same
+      manner as they hyperlink to the Websites of other listed businesses;
+      and
+
+      System wide Accredited Businesses except soliciting non-profit
+      organizations, charity shopping malls, and charity fundraising groups
+      which may not hyperlink to our Web site.
+
+    </p>
 
     <p>
       These organizations may link to our home page, to publications or to
@@ -183,16 +171,6 @@
       We may consider and approve other link requests from the following types
       of organizations:
     </p>
-
-    <ul>
-      <li>commonly-known consumer and/or business information sources;</li>
-      <li>dot.com community sites;</li>
-      <li>associations or other groups representing charities;</li>
-      <li>online directory distributors;</li>
-      <li>internet portals;</li>
-      <li>accounting, law and consulting firms; and</li>
-      <li>educational institutions and trade associations.</li>
-    </ul>
 
     <p>
       We will approve link requests from these organizations if we decide
@@ -221,22 +199,12 @@
 
     <p>Approved organizations may hyperlink to our Website as follows:</p>
 
-    <ul>
-      <li>By use of our corporate name; or</li>
-      <li>By use of the uniform resource locator being linked to; or</li>
-      <li>
-        By use of any other description of our Website being linked to that
-        makes sense within the context and format of content on the linking
-        party’s site.
-      </li>
-    </ul>
-
     <p>
       No use of Downy Shoes's logo or other artwork will be allowed for
       linking absent a trademark license agreement.
     </p>
 
-    <h3><strong>iFrames</strong></h3>
+    <p>iFrames</p>
 
     <p>
       Without prior approval and written permission, you may not create frames
@@ -244,7 +212,7 @@
       appearance of our Website.
     </p>
 
-    <h3><strong>Content Liability</strong></h3>
+    <p>Content Liability</p>
 
     <p>
       We shall not be hold responsible for any content that appears on your
@@ -255,11 +223,11 @@
       any third party rights.
     </p>
 
-    <h3><strong>Your Privacy</strong></h3>
+    <p>Your Privacy</p>
 
     <p>Please read Privacy Policy</p>
 
-    <h3><strong>Reservation of Rights</strong></h3>
+    <p>Reservation of Rights</p>
 
     <p>
       We reserve the right to request that you remove all links or any
@@ -270,61 +238,7 @@
       these linking terms and conditions.
     </p>
 
-    <h3><strong>Removal of links from our website</strong></h3>
 
-    <p>
-      If you find any link on our Website that is offensive for any reason,
-      you are free to contact and inform us any moment. We will consider
-      requests to remove links but we are not obligated to or so or to respond
-      to you directly.
-    </p>
-
-    <p>
-      We do not ensure that the information on this website is correct, we do
-      not warrant its completeness or accuracy; nor do we promise to ensure
-      that the website remains available or that the material on the website
-      is kept up to date.
-    </p>
-
-    <h3><strong>Disclaimer</strong></h3>
-
-    <p>
-      To the maximum extent permitted by applicable law, we exclude all
-      representations, warranties and conditions relating to our website and
-      the use of this website. Nothing in this disclaimer will:
-    </p>
-
-    <ul>
-      <li>
-        limit or exclude our or your liability for death or personal injury;
-      </li>
-      <li>
-        limit or exclude our or your liability for fraud or fraudulent
-        misrepresentation;
-      </li>
-      <li>
-        limit any of our or your liabilities in any way that is not permitted
-        under applicable law; or
-      </li>
-      <li>
-        exclude any of our or your liabilities that may not be excluded under
-        applicable law.
-      </li>
-    </ul>
-
-    <p>
-      The limitations and prohibitions of liability set in this Section and
-      elsewhere in this disclaimer: (a) are subject to the preceding
-      paragraph; and (b) govern all liabilities arising under the disclaimer,
-      including liabilities arising in contract, in tort and for breach of
-      statutory duty.
-    </p>
-
-    <p>
-      As long as the website and the information and services on the website
-      are provided free of charge, we will not be liable for any loss or
-      damage of any nature.
-    </p>
   </div>
 </body>
 
