--- a/HTML/men.html
+++ b/HTML/men.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" type="image/x-icon" href="../Images/-hol.png" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Shoenen</title>
+  <title>Schoenen</title>
   <link rel="stylesheet" href="../css/men.css" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../css/navbar.css">
@@ -61,19 +61,19 @@
         <div class="items2">
 
           <div class="card">
-            <img src="../Images/img-Nike1.jpg" alt="Shoe" style="width:100%" data-src>
+            <img src="../Images/img-Nike1.jpg" alt="Shoe" style="width:100%;" data-src>
             <h3>Nike Free RN OC</h3>
             <p class="price">$399.99</p>
             <p><a href="./info.html">Bekijk</a></p>
           </div>
           <div class="card">
-            <img src="../Images/nike-6.jpg" alt="Shoe" style="width:100%">
+            <img src="../Images/nike-6.jpg" alt="Shoe" style="width:100%;">
             <h3>Nike Free RN OC</h3>
             <p class="price">$299.99</p>
             <p><a href="./info.html">Bekijk</a></p>
           </div>
           <div class="card">
-            <img src="../Images/img-Nike3.jpg" alt="Shoe" style="width:100%">
+            <img src="../Images/img-Nike3.jpg" alt="Shoe" style="width:100%;">
             <h3>Nike Air Max (Blue)</h3>
             <p class="price">$199.99</p>
             <p><a href="./info.html">Bekijk</a></p>
