--- a/HTML/women.html
+++ b/HTML/women.html
@@ -32,7 +32,7 @@
     </ul>
   </nav>
   <section class="items">
-    <h1>ANDERE PRODUCTEN <br>(GRAPJE)</h1>
+    <h1>MEER SCHOENEN</h1>
     <div class="row">
       <div class="col">
         <h2>FILTER</h2>
