--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
           <a href="HTML/women.html">
             <img class="image" src="./Images/img-women5.jpeg" alt="Alt text" />
             <div class="normal">
-              <div class="text">ANDERE PRODUCTEN</div>
+              <div class="text">MEER SCHOENEN</div>
             </div>
             <div class="hover">
               <img class="image" src="./Images/img-women6.jpeg" alt="Alt text hover" />
-              <div class="text">ANDERE PRODUCTEN</div>
+              <div class="text">MEER SCHOENEN</div>
             </div>
           </a>
         </div>
